--- a/themes/SuiteP/css/suitep-base/detailview.scss
+++ b/themes/SuiteP/css/suitep-base/detailview.scss
@@ -71,7 +71,7 @@ p.msg {
 }
 
 .pagination-range-label {
-  color: $default-btn-bg;
+  color: $main-font-color;
   font-size: 13px;
   font-weight: bold;
 }
